z-index menu fix

--- a/assets/css/headers/header-v5.css
+++ b/assets/css/headers/header-v5.css
@@ -256,6 +256,7 @@
     position: absolute;
     border-top: 2px solid #ff6633;
     box-shadow: 0 5px 5px 0px rgba(90,90,90,0.075);
+    z-index: 999;
 }
 
 .header-v5 .badge-open li {
