--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -44,7 +44,7 @@ header {
   background-color: #fff;
   transition: all 0.5s ease;
   overflow:hidden;
-  z-index: 10;
+  z-index: 10 !important;
   padding: 0;
   opacity: 0;
   border: 0;
